feat(mes): Add messaging and story composer